--- a/src/css/myStyle.css
+++ b/src/css/myStyle.css
@@ -84,3 +84,21 @@ canvas {
   text-align: center;
 }
 
+button{
+  background: #00458d;
+  border-radius: 5px;
+  border: solid 5px #0085c6;
+  color: white;
+  font-size: 15px;
+  padding: 5px;
+  margin-bottom: 5px;
+  font-family: 'Times New Roman';
+}
+
+#looser>p{
+  padding-bottom:  10px;
+  margin-bottom: 0;
+  margin-top: 10px;
+}
+
+
